# daily-info

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  Dockerfile.api  PRD.md  README.md  README_zh-CN.md  docker-compose.yml  pyproject.toml
app/: __init__.py  adapters.py  api.py  catalog.py  config.py  db.py  fulltext.py  jobs.py  models.py  scheduler.py  schemas.py  services.py  source_audit.py  source_catalog.py  subscriptions.py  summary.py  tags.py  utils.py  worker.py
config/source-packs/: default.yaml
config/sources/: engineering-blogs.yaml  model-labs.yaml  papers.yaml  social-media.yaml  tech-media.yaml  zh.yaml
docs/: README.md  architecture.md  configuration.md  design.md  development.md  source-catalog.md
tests/: test_regressions.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json
web/app/: FeedWorkspace.tsx  SidebarNav.tsx  globals.css  layout.tsx  page.tsx
web/app/health/: page.tsx
web/app/settings/: page.tsx
web/app/sources/: page.tsx
web/app/sources/new/: page.tsx
web/app/visual-directions/: page.tsx
web/app/visual-directions/archive/: page.tsx
web/app/visual-directions/bento/: page.tsx
web/app/visual-directions/dark/: page.tsx
web/app/visual-directions/swiss/: page.tsx
web/lib/: api.ts
